# test_task_Zhushma_Artyom

./: .env.dist  .gitignore  README.md  pyproject.toml
app/: __init__.py  db.py  main.py
app/controllers/: user.py
app/dependencies/: pagination.py
app/models/: user.py
app/repositories/: user.py
app/schemas/: config.py  user.py
app/services/: user.py
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
migrations/versions/: 2025-04-03_created_user_table_a97462acac4a.py
