[project]
name = "test-task-zhushma-artyom"
version = "0.1.0"
description = "Test task"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "python-dotenv (>=1,<2)",
    "litestar[standard] (>=2,<3)",
    "litestar-granian (>=0,<1)",
    "litestar-asyncpg (>=0,<1)",
    "advanced-alchemy (>=0.20,<0.21)",
    "msgspec (>=0.18.6,<0.19.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
